Save the updates to prometheus queries, increasing stability for longer time ranges and resolving various bugs.

--- a/notebooks/run_benchmark_MU_SM.ipynb
+++ b/notebooks/run_benchmark_MU_SM.ipynb
@@ -331,15 +331,15 @@
    },
    "outputs": [],
    "source": [
-    "n_workers = target_workers #copy or override independently of target_workers\n",
+    "n_jobs = target_workers #copy or override independently of target_workers\n",
     "long_multiplier = 10\n",
     "#seeds, #pseudo-events, batchsize, use triton (True/False)\n",
-    "workargstriton = [range(n_workers), [1000]*n_workers, [1000]*n_workers, [True]*n_workers]\n",
-    "workargslocal = [range(n_workers), [1000]*n_workers, [250]*n_workers, [False]*n_workers]\n",
-    "workargstritonlong =  [range(n_workers*long_multiplier), \n",
-    "                      [9999]*n_workers*long_multiplier, \n",
-    "                      [1000]*n_workers*long_multiplier, \n",
-    "                      [True]*n_workers*long_multiplier]"
+    "workargstriton = [range(n_jobs), [1000]*n_jobs, [1000]*n_jobs, [True]*n_jobs]\n",
+    "workargslocal = [range(n_jobs), [1000]*n_jobs, [250]*n_jobs, [False]*n_jobs]\n",
+    "workargstritonlong =  [range(n_jobs*long_multiplier), \n",
+    "                      [9999]*n_jobs*long_multiplier, \n",
+    "                      [1000]*n_jobs*long_multiplier, \n",
+    "                      [True]*n_jobs*long_multiplier]"
    ]
   },
   {
